tests/negative/gold/type-migration-test.gold
tests/negative/type-migration-test.toit:45:22: error: Expected a parameter name in type-migration annotation
// __TYPE-MIGRATION__
                     ^
tests/negative/type-migration-test.toit:48:25: error: Expected ':' in type-migration annotation
// __TYPE-MIGRATION__ x int
                        ^
tests/negative/type-migration-test.toit:51:25: error: Expected a type in type-migration annotation
// __TYPE-MIGRATION__ x:
                        ^
tests/negative/type-migration-test.toit:54:30: error: Unexpected text in type-migration annotation
// __TYPE-MIGRATION__ x: int and then junk
                             ^~~~~~~~~~~~~
tests/negative/type-migration-test.toit:57:23: error: No parameter 'y' for type-migration annotation
// __TYPE-MIGRATION__ y: int
                      ^
tests/negative/type-migration-test.toit:66:23: error: Can't use a type-migration annotation on a block parameter
// __TYPE-MIGRATION__ b: int
                      ^
tests/negative/type-migration-test.toit:69:1: error: Type-migration annotation isn't attached to a method declaration
// __TYPE-MIGRATION__ x: int
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/type-migration-test.toit:60:26: error: Unresolved type: 'NotAType'
// __TYPE-MIGRATION__ x: NotAType
                         ^~~~~~~~
tests/negative/type-migration-test.toit:64:22: error: Type-migration annotations are only allowed on 'any' parameters
not-an-any-parameter x/string:
                     ^
tests/negative/type-migration-test.toit:78:20: warning: Deprecated type 'Pin' for parameter 'rx'. Provide an integer instead
  create-uart --rx=pin --tx=18      // Warning for rx: deprecated Pin.
                   ^~~
tests/negative/type-migration-test.toit:80:20: error: Type mismatch. Expected 'Pin' or 'int'. Got 'float'
  create-uart --rx=17.5 --tx=18     // Error: float not allowed.
                   ^~~~
tests/negative/type-migration-test.toit:81:20: error: Type mismatch. Expected 'Pin' or 'int'. Got 'null'
  create-uart --rx=null --tx=null   // Error for rx (no default value); OK for tx.
                   ^~~~
tests/negative/type-migration-test.toit:83:20: warning: Deprecated type 'Pin' for parameter 'rx'. Provide an integer instead
  create-uart --rx=sub --tx=1       // Warning: subclass of deprecated Pin.
                   ^~~
tests/negative/type-migration-test.toit:87:20: error: Type mismatch. Expected 'string?'. Got 'int'
  consume-nullable 5                // Error.
                   ^
tests/negative/type-migration-test.toit:89:18: warning: Deprecated type 'Reader' for parameter 'in'
  consume-reader StringReader       // Warning: implements deprecated interface.
                 ^~~~~~~~~~~~
tests/negative/type-migration-test.toit:91:18: error: Type mismatch. Expected 'Reader' or 'int'. Got 'string'
  consume-reader "x"                // Error.
                 ^~~
tests/negative/type-migration-test.toit:94:16: error: Type mismatch. Expected 'Port'. Got 'int'
  consume-port 5                    // Error.
               ^
tests/negative/type-migration-test.toit:96:30: warning: Deprecated type 'Port' for parameter 'p'. Provide an integer instead
  consume-deprecated-port lib.Port      // Warning: deprecated prefixed lib.Port.
                             ^~~~~
tests/negative/type-migration-test.toit:97:30: warning: Deprecated type 'Port' for parameter 'p'. Provide an integer instead
  consume-deprecated-port lib.SubPort   // Warning: subclass of deprecated prefixed lib.Port.
                             ^~~~~~~~
tests/negative/type-migration-test.toit:99:27: error: Type mismatch. Expected 'Port' or 'int'. Got 'string'
  consume-deprecated-port "bad"         // Error.
                          ^~~~~
tests/negative/type-migration-test.toit:102:22: error: Type mismatch. Expected 'int'. Got 'string'
  mixed-with-toitdoc "bad"          // Error.
                     ^~~~~
tests/negative/type-migration-test.toit:105:18: warning: Deprecated type 'Pin' for parameter 'pin'. Provide an integer instead
  uart.configure pin                // Warning: deprecated Pin on virtual call.
                 ^~~
tests/negative/type-migration-test.toit:107:18: error: Type mismatch. Expected 'Pin' or 'int'. Got 'string'
  uart.configure "bad"              // Error.
                 ^~~~~
Compilation failed
